--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "animate.css": "^4.1.1",
     "bootstrap": "^5.3.0-alpha3",
     "bootstrap-icons": "^1.10.5",
-    "sass": "^1.62.1"
+    "sass": "^1.62.1",
+    "vue3-carousel": "^0.3.1"
   }
 }
