--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
   },
   "devDependencies": {
     "@nuxt/content": "^2.6.0",
-    "@nuxt/devtools": "^0.4.6",
+    "@nuxt/devtools": "^0.7.1",
     "@nuxtjs/color-mode": "^3.2.0",
-    "@nuxtjs/eslint-module": "^4.0.2",
-    "@types/node": "^18.15.12",
-    "eslint": "^8.39.0",
+    "@nuxtjs/eslint-module": "^4.1.0",
+    "@nuxtjs/localforage": "^1.1.0",
+    "@types/node": "^18.16.14",
+    "eslint": "^8.41.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-nuxt": "^4.0.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "nuxt": "^3.4.3",
+    "nuxt": "^3.5.1",
     "prettier": "^2.8.8"
   },
   "dependencies": {
@@ -28,10 +29,15 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/vue-fontawesome": "^3.0.3",
+    "@pinia/nuxt": "^0.4.11",
     "animate.css": "^4.1.1",
     "bootstrap": "^5.3.0-alpha3",
     "bootstrap-icons": "^1.10.5",
+    "pinia": "^2.1.3",
     "sass": "^1.62.1",
     "vue3-carousel": "^0.3.1"
+  },
+  "overrides": {
+    "vue": "latest"
   }
 }
