--- a/package.json
+++ b/package.json
@@ -9,17 +9,17 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@nuxt/content": "^2.6.0",
-    "@nuxt/devtools": "^0.7.1",
-    "@nuxtjs/color-mode": "^3.2.0",
+    "@nuxt/content": "^2.7.2",
+    "@nuxt/devtools": "^0.7.2",
+    "@nuxtjs/color-mode": "^3.3.0",
     "@nuxtjs/eslint-module": "^4.1.0",
     "@nuxtjs/localforage": "^1.1.0",
-    "@types/node": "^18.16.14",
-    "eslint": "^8.41.0",
-    "eslint-config-prettier": "^8.8.0",
+    "@types/node": "^18.17.1",
+    "eslint": "^8.46.0",
+    "eslint-config-prettier": "^8.9.0",
     "eslint-plugin-nuxt": "^4.0.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "nuxt": "^3.5.1",
+    "nuxt": "^3.6.5",
     "prettier": "^2.8.8"
   },
   "dependencies": {
@@ -31,10 +31,10 @@
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "@pinia/nuxt": "^0.4.11",
     "animate.css": "^4.1.1",
-    "bootstrap": "^5.3.0-alpha3",
+    "bootstrap": "^5.3.1",
     "bootstrap-icons": "^1.10.5",
-    "pinia": "^2.1.3",
-    "sass": "^1.62.1",
+    "pinia": "^2.1.6",
+    "sass": "^1.64.2",
     "vue3-carousel": "^0.3.1"
   },
   "overrides": {
