--- a/package.json
+++ b/package.json
@@ -8,33 +8,37 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
   },
+  "type": "module",
+  "main": "./nuxt.config.ts",
   "devDependencies": {
-    "@nuxt/content": "^2.7.2",
-    "@nuxt/devtools": "^0.7.2",
+    "@nuxt/content": "^2.8.2",
+    "@nuxt/devtools": "^0.8.2",
     "@nuxtjs/color-mode": "^3.3.0",
     "@nuxtjs/eslint-module": "^4.1.0",
     "@nuxtjs/localforage": "^1.1.0",
-    "@types/node": "^18.17.1",
-    "eslint": "^8.46.0",
-    "eslint-config-prettier": "^8.9.0",
+    "@types/node": "^20.5.9",
+    "eslint": "^8.48.0",
+    "eslint-config-prettier": "^8.10.0",
     "eslint-plugin-nuxt": "^4.0.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "nuxt": "^3.6.5",
+    "nuxt": "^3.7.1",
+    "nuxt-lodash": "^2.5.0",
     "prettier": "^2.8.8"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^6.4.0",
-    "@fortawesome/fontawesome-svg-core": "^6.4.0",
-    "@fortawesome/free-brands-svg-icons": "^6.4.0",
-    "@fortawesome/free-regular-svg-icons": "^6.4.0",
-    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/fontawesome-free": "^6.4.2",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-brands-svg-icons": "^6.4.2",
+    "@fortawesome/free-regular-svg-icons": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "@pinia/nuxt": "^0.4.11",
     "animate.css": "^4.1.1",
     "bootstrap": "^5.3.1",
     "bootstrap-icons": "^1.10.5",
     "pinia": "^2.1.6",
-    "sass": "^1.64.2",
+    "pinia-plugin-persistedstate": "^3.2.0",
+    "sass": "^1.66.1",
     "vue3-carousel": "^0.3.1"
   },
   "overrides": {
