--- a/package.json
+++ b/package.json
@@ -38,8 +38,7 @@
     "bootstrap-icons": "^1.10.5",
     "pinia": "^2.1.6",
     "pinia-plugin-persistedstate": "^3.2.0",
-    "sass": "^1.66.1",
-    "vue3-carousel": "^0.3.1"
+    "sass": "^1.66.1"
   },
   "overrides": {
     "vue": "latest"
