removed trash, launch fix, lint fix

--- a/package.json
+++ b/package.json
@@ -16,14 +16,16 @@
     "@nuxt/devtools": "^1.0.6",
     "@nuxt/eslint-config": "^0.2.0",
     "@nuxtjs/color-mode": "^3.3.0",
+    "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@nuxtjs/eslint-module": "^4.1.0",
     "@nuxtjs/localforage": "^1.1.0",
     "@types/node": "^20.5.9",
+    "@typescript-eslint/parser": "^6.9.0",
     "eslint": "^8.48.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-nuxt": "^4.0.0",
     "eslint-plugin-prettier": "^5.0.1",
-    "nuxt": "^3.10.0",
+    "nuxt": "^3.10.1",
     "prettier": "^3.1.1",
     "typescript": "^5.3.3"
   },
