--- a/.eslintrc
+++ b/.eslintrc
@@ -1,22 +1,25 @@
 {
   "root": true,
-//  "env": {
-    //    "browser": true,
-    //    "node": true,
-    //    "vue/setup-compiler-macros": true
-//    "vue/setup-compiler-macros": true
-//  },
   "globals": {
     "defineProps": "readonly",
     "defineEmits": "readonly"
   },
   "parser": "vue-eslint-parser",
   "parserOptions": {
-    // parser: '@typescript-eslint/parser',
-    //    "parser": "vite-plugin-eslint",
+    "parser": "@typescript-eslint/parser",
     "ecmaVersion": 2022
   },
-  "extends": ["plugin:prettier/recommended", "plugin:nuxt/recommended"],
+  "extends": [
+    "@nuxtjs/eslint-config-typescript",
+    "plugin:prettier/recommended",
+    "plugin:nuxt/recommended"
+  ],
   "plugins": [],
-  "rules": {}
+  "rules": {
+    "@typescript-eslint/no-unused-vars": "warn",
+    "no-console": "off",
+    "vue/no-multiple-template-root": "off",
+    "vue/multi-word-component-names": "off",
+    "vue/no-v-html": "off"
+  }
 }
